# gstreamer-terminal-video-player

./: .gitignore  Cargo.toml  README.md
src/: input_handler.rs  launch.rs  main.rs  resize_image.rs  term_size.rs  terminal_sink.rs
src/terminal_sink/: diff.rs  mod.rs  resize.rs  video_pipe.rs
