[package]
name = "gstreamer-terminal-video-player"
version = "0.1.0"
edition = "2024"

[profile.dev.package.'*']
opt-level = 3
debug-assertions = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true
lto = "fat"

[dependencies]
gstreamer = { version = "0.24.3", features = ["v1_26"] }
gstreamer-app = { version = "0.24.2", features = ["v1_26"] }
gstreamer-video = { version = "0.24.3", features = ["v1_26"] }
termion = { version = "4.0.5", default-features = false }
bytemuck = { version = "1.24.0", features = ["must_cast_extra", "min_const_generics"] }
glib = "0.21.4"
image = "0.25.9"
defer = "0.2.1"
ansi_term = "0.12.1"
parking_lot = "0.12.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
dispatch = "0.2.0"
