[package]
name = "video-cat"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true
lto = "fat"

[dependencies]
gstreamer = "0.24.4"
gstreamer-app = "0.24.4"
gstreamer-video = "0.24.4"
termion = { version = "4.0.6", default-features = false }
bytemuck = { version = "1.24.0", features = ["must_cast_extra", "min_const_generics", "derive"] }
clap = { version = "4.5.53", features = ["derive", "color"] }
resize = { version = "0.8.8", features = ["rayon"] }
rgb = "0.8.52"
glib = "0.21.5"
defer = "0.2.1"
ansi_term = "0.12.1"
parking_lot = "0.12.5"


[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
dispatch = "0.2.0"
